--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "start": "ts-node index.ts"
+    "start": "nodemon"
   },
   "keywords": [
     "koa",
