--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest",
     "start": "nodemon"
   },
+  "jest": {
+    "preset": "ts-jest"
+  },
   "keywords": [
     "koa",
     "ts",
@@ -21,6 +24,11 @@
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
