--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^28.1.1",
     "@types/supertest": "^2.0.12",
+    "dotenv": "^16.0.1",
     "jest": "^28.1.1",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.4",
