--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@types/log4js": "^2.3.5",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
-    "log4js": "^6.5.2"
+    "log4js": "^6.5.2",
+    "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.20.1",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.42",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.3",
     "dotenv": "^16.0.1",
     "jest": "^28.1.1",
     "supertest": "^6.2.3",
