--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
     "@types/log4js": "^2.3.5",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
     "log4js": "^6.5.2",
