--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
     "@types/log4js": "^2.3.5",
+    "async-validator": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
     "koa-router": "^10.1.1",
     "log4js": "^6.5.2",
     "mysql2": "^2.3.3",
