--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
+    "@types/koa-static": "^4.0.2",
     "@types/log4js": "^2.3.5",
     "async-validator": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
     "log4js": "^6.5.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
